Add lots more info